--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
   - 'Install':
     - 'Pure Python': '01_install/pure_python.md'
     - 'Docker': '01_install/docker.md'
+    - 'Telegram': '01_install/telegram.md'
   - 'Strategies': '02_strategies/index.md'
   - 'Resources': 'resources.md'
   - 'Donate': 'donate.md'
