--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Elena trading bot documentation"
+site_name: "Elena Framework for cryptocurrencies trading bots documentation"
 repo_url: https://github.com/Pasta-fantasia/elena-docs
 edit_uri: edit/main/docs/
 extra:
