--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,9 +60,10 @@ nav:
     - 'Exchanges': '02_config/exchanges.md'
     - 'Telegram': '02_config/telegram.md'
   - 'Strategies':
-      - 'Use cases and overview': '03_strategies/index.md'
-      - 'DCA_Conditional_Buy_LR_with_TrailingStop': '03_strategies/DCA_Conditional_Buy_LR_with_TrailingStop'
+      - 'Use cases and overview': '03_strategies/use_cases.md'
       - 'Configuration by example': '03_strategies/configuration_by_example.md'
+      - 'Experiments':
+        - 'DCA_Conditional_Buy_LR_with_TrailingStop': '03_strategies/DCA_Conditional_Buy_LR_with_TrailingStop/index.md'
   - 'Roadmap': '04_roadmap/index.md'
   - 'Resources': 'resources.md'
   - 'Donate': 'donate.md'
